# my-trade

./: .env.example  .gitignore  ARCHITECTURE.md  Launch My-Trade.bat  PROJECT_ROADMAP.md  README.md  SCOPE.md  Stop My-Trade.bat  backtester.py  broker.py  config.py  journal.py  main.py  models.py  pyproject.toml  requirements-dev.txt  requirements.txt  risk.py  scanner.py  slack_notify.py  strategy.py  utils.py
dashboard/: __init__.py  server.py
dashboard/static/: app.js  index.html  styles.css
docs/: MOBILE_ACCESS.md  MULTI_PROVIDER_RESEARCH.md  PHASE4_ACTIVATION.md  SCHEDULED_TRADING.md
frontend/: README.md  index.html  tailwind.config.ts
frontend/.lovable/: plan.md
frontend/src/: App.tsx  index.css
frontend/src/components/: ConfirmDialog.tsx  LiveBanner.tsx  PageHeader.tsx  Sidebar.tsx  StatusBadge.tsx
frontend/src/hooks/: useApi.ts
frontend/src/integrations/supabase/: types.ts
frontend/src/lib/: api.ts  format.ts  types.ts
frontend/src/pages/: Activity.tsx  Control.tsx  Dashboard.tsx  Knowledge.tsx  Positions.tsx  Risk.tsx  Settings.tsx  Watchlist.tsx
frontend/supabase/: config.toml
scripts/: __init__.py  _audit_journal.py  _audit_today.py  api_server.py  dashboard.py  paper_trade.py  register_scheduled_tasks.ps1  research_brief.py  research_run.py  scheduled_start.bat  scheduled_stop.bat  sync_loss_lessons.py  sync_trade_knowledge.py  today_report.py  today_summary.py
src/my_trade/: __init__.py
src/my_trade/api/: __init__.py  app.py  bot_manager.py  env_patch.py  serializers.py  watchlist_intel.py
src/my_trade/config/: __init__.py  parsing.py  settings.py
src/my_trade/core/: __init__.py  market_calendar.py  models.py
src/my_trade/core/execution/: __init__.py  adapter.py  alpaca_client.py  broker.py  idempotency.py  models.py  planner.py  retry.py
src/my_trade/core/monitoring/: __init__.py  account.py  alpaca_account.py  models.py  orchestrator.py  state.py  store.py
src/my_trade/core/risk/: __init__.py  engine.py  models.py
src/my_trade/core/screening/: __init__.py  build.py  filters.py  metrics.py  models.py  screener.py  symbol_filters.py  universe.py
src/my_trade/core/strategy/: __init__.py  indicators.py  models.py  signals.py  strategy.py
src/my_trade/data/: __init__.py  alpaca_data.py  alpaca_movers.py  bars.py  provider.py  stock_data.py
src/my_trade/observability/: __init__.py  journal.py
src/my_trade/research/: __init__.py  advisor.py  brief.py  client.py  composite.py  context.py  evaluation.py  factory.py  gating.py  history.py  knowledge.py  memory.py  models.py  news.py  overnight.py  portfolio.py  postmortem.py  prompts.py  providers.py  rate_limit.py  reflection.py  technical.py
tests/unit/: test_alpaca_data.py  test_api.py  test_architecture_guardrails.py  test_config.py  test_data_bars.py  test_data_providers.py  test_execution.py  test_journal.py  test_market_calendar.py  test_monitoring.py  test_movers.py  test_overnight.py  test_research.py  test_research_features.py  test_research_gating.py  test_research_memory.py  test_research_technical.py  test_risk_engine.py  test_screening.py  test_strategy_engine.py  test_strategy_signals.py  test_trade_knowledge.py  test_universe_build.py  test_watchlist_intel.py
